latest web app files

--- a/hello_flask/Dockerfile
+++ b/hello_flask/Dockerfile
@@ -1,9 +1,13 @@
 FROM python:3.8-slim
 WORKDIR /app
 COPY . .
-RUN pip install flask
+RUN apt-get update && apt-get install -y \
+    gcc \
+    python3-dev \
+    libmariadb-dev \
+    pkg-config
 EXPOSE 5004
 CMD ["python", "app.py"]
 # This Dockerfile sets up a simple Flask application that listens on port 5004.
 # It uses a slim version of Python 3.8, copies the application code into the
-# container, installs Flask, and runs the application.
+# container, installs Flask and MySQL client, and runs the application.
